Fixed profile-card alignment

--- a/styles/profile.css
+++ b/styles/profile.css
@@ -46,7 +46,7 @@ body {
 }
 
 .stats span {
-    font-size: 22px !important;
+    font-size: 22px;
 }
 
 .stats h6 {
@@ -56,7 +56,8 @@ body {
     font-size: 20px;
 }
 
-.stats h6:last-child, .stats span:last-child {
+.stats h6:last-child,
+.stats span:last-child {
     float: right;
 }
 
@@ -91,4 +92,4 @@ body {
 #grid-container {
     display: grid;
     grid-template-columns: auto auto;
-}   
+}
